editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -378,8 +378,9 @@ div.main section.featured article.project {
     }
 
     .details h2 {
-        font-size:1.2em;
+        font-size:1.1em;
         font-weight:bold;
+        margin-bottom:5px;
     }
 
     .details ul,
@@ -419,11 +420,6 @@ div.main section.featured article.project {
 
     .categories .landscape-type {
         background:#7eac32;
-    }
-
-    .people {
-        float:left;
-        width:50%;
     }
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
