editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -128,7 +128,7 @@
             $('.box').each(function(i, obj){
                 width = $(this).width();
                 $(this).css('height',width);
-                $(this).css('line-height',width);
+                $(this).css('line-height',width + "px");
             });
     }
 
