editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -130,7 +130,7 @@
                 $(this).css('height',width);
                 $(this).css('line-height',width + "px");
             });
-            $('.box.center').each(function(i, obj){
+            $('.center').each(function(i, obj){
                 width = $(this).width();
                 $(this).css('line-height',width + "px");
             });
