--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -242,6 +242,7 @@ div.main section.featured article.project {
         float:left;
         width:66.66667%;
         position: relative;
+        background:url('images/top-left-bg.png') no-repeat top left;
     }
 
     .slideshow .carousel {
@@ -250,6 +251,7 @@ div.main section.featured article.project {
         margin:0 1.25%;
         padding: 0;
         background:url('images/bottom-right-bg.png') no-repeat bottom right;
+        background:url('images/top-left-bg.png') no-repeat top left;
     }
 
     .slideshow .carousel .slides img {
