--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -243,6 +243,7 @@ div.main section.featured article.project {
         width:66.66667%;
         position: relative;
         background:url('images/top-left-bg.png') no-repeat top left;
+        background:url('images/bottom-right-bg.png') no-repeat bottom right;
     }
 
     .slideshow .carousel {
