--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -129,10 +129,6 @@ body {
         text-align:right;
     }
 
-    article.project {
-        background:url('images/top-left-bg.png') no-repeat top left;
-    }
-
 /********** HOMEPAGE ***********/
 .content > div {
     float:left;
@@ -246,6 +242,7 @@ div.main section.featured article.project {
         float:left;
         width:66.66667%;
         position: relative;
+        background:url('images/top-left-bg.png') no-repeat -10px left;
     }
 
     .slideshow .carousel {
@@ -253,7 +250,6 @@ div.main section.featured article.project {
         width:97.5%;
         margin:0 1.25%;
         padding: 0;
-        background:url('images/top-left-bg.png') no-repeat top left;
     }
 
     .slideshow .carousel .slides img {
