--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -244,6 +244,7 @@ div.main section.featured article.project {
         position: relative;
         background:url('images/top-left-bg.png') no-repeat top left;
         overflow: auto;
+        margin-top:20px;
     }
 
     .slideshow .carousel {
