--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -242,7 +242,7 @@ div.main section.featured article.project {
         float:left;
         width:66.66667%;
         position: relative;
-        background:url('images/top-left-bg.png') no-repeat top left;
+        background:url('images/top-bg.png') no-repeat top left;
         overflow: auto;
     }
 
