editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -404,7 +404,7 @@ div.main section.featured article.project {
         margin: 10px 2.5%;
     }
 
-    .catgeories {
+    .categeories {
         overflow: auto;
     }
 
