--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -396,6 +396,11 @@ div.main section.featured article.project {
         overflow: auto;
         margin: 10px 2.5% 10px 2.5%;
     }
+
+    .details p {
+        text-align: justify;
+    }
+
     .details .size, .details .date, .details .designer {
         float:left;
         width:20%;
@@ -404,7 +409,7 @@ div.main section.featured article.project {
         margin: 10px 2.5%;
     }
 
-    .categeories {
+    .categories {
         overflow: auto;
     }
 
