--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -400,6 +400,7 @@ div.main section.featured article.project {
 
     .details p {
         text-align: justify;
+        font-size:.85em;
     }
 
     .details .size, .details .date, .details .designer {
