--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -49,6 +49,8 @@
                     {% endif %}
                     <p class="size box">{{ project.area|floatformat }} {{ project.get_unit_display }}</p>
                     {% if project.clients.all or project.collaborators.all %}
+                    {% load easy_maps_tags %}
+                    {% easy_map project.address 180 180 %}
                 <div class="people">
                     {% if project.clients.all %}
                     <h2>Clients</h2>
