--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -438,8 +438,7 @@ div.main section.featured article.project {
     .categories li {
         float:left;
         width:19%;
-        margin: 0;
-        padding-right:1%;
+        margin-right: 1%;
         height:30px;
         color:#fff;
         font-weight: bold;
