--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -108,7 +108,7 @@
     }
 
     function FlexMargin() {
-            $('.box').each(function(i, obj){
+            $('.flex-margin').each(function(i, obj){
                 //test
             });
 
