editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -110,7 +110,7 @@
 
     function FlexMargin() {
             $('.flex-margin').each(function(i, obj){
-                alert(this.border().right);
+                alert($(this).margin().right);
             });
 
             var li = $(".controls li");
