editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -29,7 +29,7 @@
         <section class="details">
             <header><h1>{{ project.name }}</h1></header>
             <div class="description">
-                <div class="meta flex-margin">
+                <div class="meta">
                     {% if project.project_types.all or project.landscape_types.all %}
                         <ul class="categories flex-margin">
                             {% if project.project_types.all %}
