--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -247,8 +247,8 @@ div.main section.featured article.project {
 
     .slideshow .carousel {
         position: relative;
-        width:97.5%;
-        margin:0 1.25%;
+        width:97.14286;
+        margin:0 1.42857%;
         padding: 0;
     }
 
