--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -247,7 +247,7 @@ div.main section.featured article.project {
 
     .slideshow .carousel {
         position: relative;
-        width:97.14286;
+        width:97.14286%;
         margin:0 1.42857%;
         padding: 0;
     }
