editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -111,7 +111,7 @@
     function FlexMargin() {
             $('.flex-margin').each(function(i, obj){
                 margin = $(this).margin().right;
-                $(this).margin({bottom: margin, top: margin, left: margin, right: margin })
+                $(this).margin({bottom: margin, top: margin })
             });
             /*
             var li = $(".controls li");
