--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -4,7 +4,7 @@
     <article class="project">
     {% if project.projectimage_set.all %}
         <section class="slideshow">
-            <div class="carousel">
+            <div class="carousel flex-margin">
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
                     <li>
