editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -27,7 +27,7 @@
         </section>
     {% endif %}
         <section class="details">
-            <header><h1>{{ project.name }}</h1></header>
+            <header class="flex-margin"><h1>{{ project.name }}</h1></header>
             <div class="description">
                 <div class="meta">
                     {% if project.project_types.all or project.landscape_types.all %}
