--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -72,7 +72,7 @@
                     <p class="size flex-box flex-margin">{{ project.area|floatformat }} {{ project.get_unit_display }}</p>
                     <div class="location flex-margin flex-box">
                         {% load easy_maps_tags %}
-                        {% easy_map project.address %}
+                        {% easy_map project.address 300 300 %}
                     </div>
                 </div>
                 <div class="text flex-margin">
