editing detail page

--- a/futuregreen/templates/portfolio/map.html
+++ b/futuregreen/templates/portfolio/map.html
@@ -1,4 +1,4 @@
-{% extends "easy_maps/templates/easy_maps/map.html" %}
+{% extends "easy_maps/map.html" %}
 {% block html %}
     <!-- HTML map container -->
     <div id="map-canvas-{{ map.pk }}"
