--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -66,13 +66,15 @@
                             {% endif %}
                         </div>
                     {% endif %}
-                    {% if project.date_end %}
-                        <p class="date flex-box flex-margin">{{ project.date_end|date:"F Y" }}</p>
-                    {% endif %}
-                    <p class="size flex-box flex-margin">{{ project.area|floatformat }} {{ project.get_unit_display }}</p>
-                    <div class="location flex-margin flex-box">
-                        {% load easy_maps_tags %}
-                        {% easy_map project.address using 'portfolio/map.html' %}
+                    <div class="info-boxes">
+                        {% if project.date_end %}
+                            <p class="date flex-box flex-margin">{{ project.date_end|date:"F Y" }}</p>
+                        {% endif %}
+                        <p class="size flex-box flex-margin">{{ project.area|floatformat }} {{ project.get_unit_display }}</p>
+                        <div class="location flex-margin flex-box">
+                            {% load easy_maps_tags %}
+                            {% easy_map project.address using 'portfolio/map.html' %}
+                        </div>
                     </div>
                 </div>
                 <div class="text flex-margin">
